[tool.poetry]
name = "langchain-project"
version = "0.1.0"
description = ""
authors = ["Lizz Quint <lizzcoldev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"
openai = "^0.27.10"
langchain = {extras = ["llms"], version = "^0.0.276"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
